--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,43 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap');
+
+@layer base {
+  @font-face {
+    font-family: 'Satoshi';
+    font-weight: normal;
+    src: url(/fonts/Satoshi-Regular.woff2) format('woff2'),
+      url(/fonts/Satoshi-Regular.woff) format('woff');
+  }
+}
+
+.display {
+  font-family: Inter;
+  font-weight: bold;
+  font-size: '44px';
+  line-height: '64px';
+}
+
+@media (max-width: 1024px) {
+  .display {
+    font-family: Inter;
+    font-weight: bold;
+    font-size: '36px';
+    line-height: '48px';
+  }
+}
+
+@media (max-width: 768px) {
+  .display {
+    font-family: Inter;
+    font-weight: bold;
+    font-size: '32px';
+    line-height: '40px';
+  }
+}
+
+.extra-small {
+  font-size: 10px;
+  line-height: 16px;
+}
