--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,43 +1,130 @@
 @tailwind base;
 @tailwind components;
+
+@font-face {
+  font-family: 'Satoshi';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: local('Satoshi') url('../assets/fonts/Satoshi-Light.woff2')
+      format('woff2'),
+    local('Satoshi') url('../assets/fonts/Satoshi-Light.woff') format('woff');
+}
+@font-face {
+  font-family: 'Satoshi';
+  font-style: italic;
+  font-weight: 300;
+  font-display: swap;
+  src: local('Satoshi') url('../assets/fonts/Satoshi-LightItalic.woff2')
+      format('woff2'),
+    local('Satoshi') url('../assets/fonts/Satoshi-LightItalic.woff')
+      format('woff');
+}
+@font-face {
+  font-family: 'Satoshi';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Satoshi') url('../assets/fonts//Satoshi-Regular.woff2')
+      format('woff2'),
+    local('Satoshi') url('../assets/fonts/Satoshi-Regular.woff') format('woff');
+}
+@font-face {
+  font-family: 'Satoshi';
+  font-style: italic;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Satoshi') url('../assets/fonts/Satoshi-Italic.woff2')
+      format('woff2'),
+    local('Satoshi') url('../assets/fonts/Satoshi-Italic.woff') format('woff');
+}
+@font-face {
+  font-family: 'Satoshi';
+  font-style: normal;
+  font-weight: 500;
+  font-display: swap;
+  src: local('Satoshi') url('../assets/fonts/Satoshi-Medium.woff2')
+      format('woff2'),
+    local('Satoshi') url('../assets/fonts/Satoshi-Medium.woff') format('woff');
+}
+@font-face {
+  font-family: 'Satoshi';
+  font-style: italic;
+  font-weight: 500;
+  font-display: swap;
+  src: local('Satoshi') url('../assets/fonts/Satoshi-MediumItalic.woff2')
+      format('woff2'),
+    local('Satoshi') url('../assets/fonts/Satoshi-MediumItalic.woff')
+      format('woff');
+}
+@font-face {
+  font-family: 'Satoshi';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: local('Satoshi') url('../assets/fonts/Satoshi-Bold.woff2')
+      format('woff2'),
+    local('Satoshi') url('../assets/fonts/Satoshi-Bold.woff') format('woff');
+}
+@font-face {
+  font-family: 'Satoshi';
+  font-style: italic;
+  font-weight: 700;
+  font-display: swap;
+  src: local('Satoshi') url('../assets/fonts/Satoshi-BoldItalic.woff2')
+      format('woff2'),
+    local('Satoshi') url('../assets/fonts/Satoshi-BoldItalic.woff')
+      format('woff');
+}
+@font-face {
+  font-family: 'Satoshi';
+  font-style: normal;
+  font-weight: 900;
+  font-display: swap;
+  src: local('Satoshi') url('../assets/fonts/Satoshi-Black.woff2')
+      format('woff2'),
+    local('Satoshi') url('../assets/fonts/Satoshi-Black.woff') format('woff');
+}
+@font-face {
+  font-family: 'Satoshi';
+  font-style: italic;
+  font-weight: 900;
+  font-display: swap;
+  src: local('Satoshi') url('../assets/fonts/Satoshi-BlackItalic.woff2')
+      format('woff2'),
+    local('Satoshi') url('../assets/fonts/Satoshi-BlackItalic.woff')
+      format('woff');
+}
+
+/* -------------------------------------------------------
+Variable font.
+Usage:
+  html { font-family: 'Inter', sans-serif; }
+  @supports (font-variation-settings: normal) {
+    html { font-family: 'Inter var', sans-serif; }
+  }
+*/
+@font-face {
+  font-family: 'Satoshi var';
+  font-weight: 100 900;
+  font-display: swap;
+  font-style: normal;
+  font-named-instance: 'Regular';
+  src: local('Satoshi') url('../assets/fonts/Satoshi-Variable.woff2')
+      format('woff2'),
+    local('Satoshi') url('../assets/fonts/Satoshi-Variable.woff') format('woff');
+}
+@font-face {
+  font-family: 'Satoshi var';
+  font-weight: 100 900;
+  font-display: swap;
+  font-style: italic;
+  font-named-instance: 'Italic';
+  src: local('Satoshi var') url('../assets/fonts/Satoshi-VariableItalic.woff2')
+      format('woff2'),
+    local('Satoshi var') url('../assets/fonts/Satoshi-VariableItalic.woff')
+      format('woff');
+}
+
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap');
-
-@layer base {
-  @font-face {
-    font-family: 'Satoshi';
-    font-weight: normal;
-    src: url(/fonts/Satoshi-Regular.woff2) format('woff2'),
-      url(/fonts/Satoshi-Regular.woff) format('woff');
-  }
-}
-
-.display {
-  font-family: Inter;
-  font-weight: bold;
-  font-size: '44px';
-  line-height: '64px';
-}
-
-@media (max-width: 1024px) {
-  .display {
-    font-family: Inter;
-    font-weight: bold;
-    font-size: '36px';
-    line-height: '48px';
-  }
-}
-
-@media (max-width: 768px) {
-  .display {
-    font-family: Inter;
-    font-weight: bold;
-    font-size: '32px';
-    line-height: '40px';
-  }
-}
-
-.extra-small {
-  font-size: 10px;
-  line-height: 16px;
-}
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
