--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -128,3 +128,4 @@ Usage:
 
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.cdnfonts.com/css/ink-free');
