--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -129,3 +129,16 @@ Usage:
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.cdnfonts.com/css/ink-free');
+
+.testimonial-bg {
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 0) 20.1%,
+    #fcfbff 57.73%,
+    #eee9fe 100%
+  );
+}
+
+.testimonial-shadow {
+  box-shadow: 0px 0px 24px rgba(57, 33, 124, 0.16);
+}
