UI: Footer Changes and Develop Merge (#22)
Co-authored-by: Rizwan Memon <rizwan2000.rm@gmail.com>

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -126,6 +126,14 @@ Usage:
       format('woff');
 }
 
+.tooltip {
+  @apply invisible absolute;
+}
+
+.has-tooltip:hover .tooltip {
+  @apply visible z-50;
+}
+
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.cdnfonts.com/css/ink-free');
